--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <nav class="navbar">
@@ -38,6 +38,7 @@
         <button class="cta-button" onclick="smoothScrollTo('#nav-menu')">Start Your Journey</button>
     </section>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
