--- a/videos.html
+++ b/videos.html
@@ -26,39 +26,39 @@
         <h2 class="page-title">Kissis (multiple) ahem ahem</h2>
         <p class="page-description">Videos that capture our love. Click to play in a lightbox.</p>
         <div class="video-gallery">
-            <div class="video-item fade-in" onclick="openLightbox('videos/video1.mp4')">
+            <div class="video-item fade-in" onclick="openLightbox('video1.mp4')">
                 <!-- Add your video thumbnail here: src="images/video-thumb1.jpg" -->
-                <img src="images/video-thumb1.jpg" alt="Video 1" loading="lazy">
+                <img src="video-thumb1.jpg" alt="Video 1" loading="lazy">
                 <div class="play-btn">▶</div>
             </div>
 
-            <div class="video-item fade-in" onclick="openLightbox('videos/video2.mp4')">
+            <div class="video-item fade-in" onclick="openLightbox('video2.mp4')">
                 <!-- Add your video thumbnail here: src="images/video-thumb1.jpg" -->
-                <img src="images/video-thumb2.jpg" alt="Video 2" loading="lazy">
+                <img src="video-thumb2.jpg" alt="Video 2" loading="lazy">
                 <div class="play-btn">▶</div>
             </div>
 
-            <div class="video-item fade-in" onclick="openLightbox('videos/video3.mp4')">
+            <div class="video-item fade-in" onclick="openLightbox('video3.mp4')">
                 <!-- Add your video thumbnail here: src="images/video-thumb1.jpg" -->
-                <img src="images/video-thumb3.jpg" alt="Video 3" loading="lazy">
+                <img src="video-thumb3.jpg" alt="Video 3" loading="lazy">
                 <div class="play-btn">▶</div>
             </div>
 
-            <div class="video-item fade-in" onclick="openLightbox('videos/video4.mp4')">
+            <div class="video-item fade-in" onclick="openLightbox('video4.mp4')">
                 <!-- Add your video thumbnail here: src="images/video-thumb1.jpg" -->
-                <img src="images/video-thumb4.jpg" alt="Video 4 " loading="lazy">
+                <img src="video-thumb4.jpg" alt="Video 4 " loading="lazy">
                 <div class="play-btn">▶</div>
             </div>
 
-            <div class="video-item fade-in" onclick="openLightbox('videos/video5.mp4')">
+            <div class="video-item fade-in" onclick="openLightbox('video5.mp4')">
                 <!-- Add your video thumbnail here: src="images/video-thumb1.jpg" -->
                 <img src="images/video-thumb5.jpg" alt="Video 5" loading="lazy">
                 <div class="play-btn">▶</div>
             </div>
 
-            <div class="video-item fade-in" onclick="openLightbox('videos/video6.mp4')">
+            <div class="video-item fade-in" onclick="openLightbox('video6.mp4')">
                 <!-- Add your video thumbnail here: src="images/video-thumb1.jpg" -->
-                <img src="images/video-thumb6.jpg" alt="Video 6" loading="lazy">
+                <img src="video-thumb6.jpg" alt="Video 6" loading="lazy">
                 <div class="play-btn">▶</div>
             </div>
             <!-- Add more video items as needed -->
@@ -73,3 +73,4 @@
 </body>
 
 </html>
+
